--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,12 +3,13 @@
 
   <h2>Join now</h2>
 
-  <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
-    
+  <span class="error" *ngIf="error">{{ error }}</span>
+
   <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
     <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
     <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
+
 
     <button type="submit" [disabled]="!formData.valid" class="basic-btn">Create my account</button>
   </form>
